--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -18,4 +18,4 @@ jobs:
       - name: Run tests
         uses: docker://alpine/git:latest
         run: |
-          git show --name-only
+          git log -1 --stat
