Kickoff the next run to test p6

--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -9,6 +9,10 @@ on:
 
 jobs:
   ci-job:
+    permissions:
+      scm-token-own: read
+    outputs:
+      preprod-changed: ${{ steps.changes.outputs.preprod-changed }}
     steps:
       - uses: docker://alpine/git:latest
         run: |
