Kickoff the next run to test p14

--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -36,7 +36,7 @@ jobs:
   preprod-deploy:
     needs:
       - ci-job
-    if: ${{ jobs.ci-job.outputs.preprod-changed }}
+    if: ${{ needs.outputs.preprod-changed }}
     permissions:
       scm-token-own: read
       scm-token-org: read
