Kickoff the next run to test p16

--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -24,8 +24,8 @@ jobs:
           echo "true" > $CLOUDBEES_OUTPUTS/preprod-changed
   preprod-deploy:
     needs: [ci-job]
-    if: ${{ needs.ci-job.outputs.preprod-changed }}
     steps:
       - uses: docker://alpine/git:latest
         run:
            echo "$CLOUDBEES_OUTPUTS"
+           echo "${{ needs.ci-job.outputs.preprod-changed }}"
