--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: docker://alpine/git:latest
         run:
-           if ["${{ needs.ci-job.outputs.preprod-changes }}" == "true"]
+           if ["${{ needs.ci-job.outputs.preprod-changes }}" == "true"]; then
            echo "Deploying preprod"
            fi
   prod-deploy:
@@ -37,6 +37,6 @@ jobs:
     steps:
       - uses: docker://alpine/git:latest
         run:
-           if ["${{ needs.ci-job.outputs.prod-changes }}" == "true"]
+           if ["${{ needs.ci-job.outputs.prod-changes }}" == "true"]; then
            echo "Deploying prod"
            fi
