--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: docker://alpine/git:latest
         run: |
-           if [] "${{ needs.ci-job.outputs.preprod-changes }}" == "true"] ; then
+           if  [ "${{ needs.ci-job.outputs.preprod-changes }}" == "true" ] ; then
               echo "Deploying preprod"
            else 
               echo "Not Deploying preprod"
@@ -39,4 +39,8 @@ jobs:
     steps:
       - uses: docker://alpine/git:latest
         run: |
-           echo "${{ needs.ci-job.outputs.prod-changes }}"
+           if [ "${{ needs.ci-job.outputs.prod-changes }}" == "true" ] ; then
+              echo "Deploying prod"
+           else 
+              echo "Not Deploying prod"
+           fi
