Kickoff the next run to test p33

--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -22,7 +22,7 @@ jobs:
         id: changes
         uses: docker://alpine/git:latest
         run: |
-          echo "false" > $CLOUDBEES_OUTPUTS/preprod-changes
+          echo "true" > $CLOUDBEES_OUTPUTS/preprod-changes
           echo "true" > $CLOUDBEES_OUTPUTS/prod-changes
   preprod-deploy:
     needs: [ci-job]
