Kickoff the next run to test p33

--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -30,7 +30,9 @@ jobs:
       - uses: docker://alpine/git:latest
         run: |
            echo "${{ needs.ci-job.outputs.preprod-changes }}"
-           if  [ "${{ needs.ci-job.outputs.preprod-changes }}" == "true" ] ; then
+           preprod_changed=${{ needs.ci-job.outputs.preprod-changes }}
+           echo $preprod_changed
+           if  [ $preprod_changed == "true" ] ; then
               echo "Deploying preprod"
            else 
               echo "Not Deploying preprod"
