--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -33,3 +33,4 @@ jobs:
           git diff --name-only $commit^
           echo ${{ cloudbees.version }}
           echo ${{ cloudbees.scm.branch }}
+          env
