--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: cloudbees-io/checkout@v1
       - name: Run tests
         id: changes
-        uses: docker://alpine/git:latest
+        uses: calculi-corp/cb-internal-shared-actions/build@v3
         env:
           iam_role: ${{ vars.oidc_staging_iam_role }}
         run: |
