--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -17,7 +17,7 @@ jobs:
         id: changes
         uses: docker://alpine/git:latest
         env:
-          iam_role: ${{ cloudbees.version }}${{ cloudbees.scm.branch == 'main' && '' || format('-{0}',cloudbees.scm.branch) }}
+          iam_role: ${{ cloudbees.version }}${{ cloudbees.scm.branch != 'main' && format('-{0}',cloudbees.scm.branch) || '' }}
           #iam_role: ${{ cloudbees.version }}${{ cloudbees.scm.branch == 'main' && '' || '-' }}${{ cloudbees.scm.branch == 'main' && '' || cloudbees.scm.branch }}
         run: |
           echo $iam_role
