--- a/.cloudbees/workflows/my-workflow-2.yaml
+++ b/.cloudbees/workflows/my-workflow-2.yaml
@@ -7,7 +7,8 @@ on:
       - "**"
   workflow_dispatch:
 env:
-  is_main_branch: ${{ vars.ServiceNowUrl }}
+  is_main_branch: ${{ vars.foo }}
+
 jobs:
   build:
     steps:
