--- a/.cloudbees/workflows/qa-smoketest-workflow.yaml
+++ b/.cloudbees/workflows/qa-smoketest-workflow.yaml
@@ -3,12 +3,12 @@ kind: workflow
 name: My automation
 
 on:
-  # schedule:
-  #   - cron: 0,6,12,18,24,30,36,42,48,54 * * * *
-  push:
-    branches:
-      - 'CBP-21126'
-  workflow_dispatch:
+  schedule:
+    - cron: 0,6,12,18,24,30,36,42,48,54 * * * *
+  # push:
+  #   branches:
+  #     - 'CBP-21126'
+  # workflow_dispatch:
 
 env:
   ORGANIZATION_URL: '${{ vars.ORGANIZATION_URL }}'
@@ -37,7 +37,7 @@ jobs:
           printf %s $(date -Iseconds) > $CLOUDBEES_OUTPUTS/message
       - id: build
         name: Build using the shared action
-        if: ${{ vars.workflow_execution_env == 'production' }}
+        if: ${{ vars.workflow_execution_env == 'qa' }}
         uses: docker://golang:1.23.2
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -tags netgo -ldflags '-w -extldflags \"-static\"' -o smoke-tester --buildvcs=0
