--- a/.cloudbees/workflows/qa-smoketest-workflow.yaml
+++ b/.cloudbees/workflows/qa-smoketest-workflow.yaml
@@ -8,7 +8,7 @@ on:
   # push:
   #   branches:
   #     - 'CBP-21126'
-  # workflow_dispatch:
+  workflow_dispatch:
 
 env:
   ORGANIZATION_URL: '${{ vars.ORGANIZATION_URL }}'
