--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -2,11 +2,17 @@ apiVersion: automation.cloudbees.io/v1alpha1
 kind: workflow
 name: My workflow
 
+#on:
+#  push:
+#    branches:
+#      - '**'
 on:
+  schedule:
+    - cron: 0,6,12,18,24,30,36,42,48,54 * * * *
   push:
     branches:
-      - '**'
-
+      - 'main' 
+      
 jobs:
   build:
     steps:
@@ -14,4 +20,4 @@ jobs:
         uses: docker://golang:1.20.3-alpine3.17
         shell: sh
         run: |
-          echo "hello world 24 in qa in ${{ secrets.testSecret }}"
+          echo "hello world 24 in qa in"
